# Blog

./: .gitattributes  .gitignore  README.md  docker-compose.yml  dockerfile
.circleci/: config.yml
Backend/: .env.example  Makefile  dockerfile
Backend/src/: .env  CMakeCache.txt  CMakeLists.txt  Makefile  Server.cpp  build.sh  cmake_install.cmake
Backend/src/app/: Server.cpp
Backend/src/app/config/: Connect.cpp  Logger.cpp
Backend/src/app/controllers/: ArticleController.cpp  UserController.cpp
Backend/src/app/middleware/: Authentication.cpp
Backend/src/app/models/: ArticleModel.cpp  UserModel.cpp
Backend/src/app/routes/: Marker.cpp  Router.cpp
Backend/src/app/utils/: CommandQuery.cpp  Queries.cpp  Tratament.cpp
Backend/src/database/: config.json  seeders.sql  tables.sql
Backend/src/includes/config/: Connect.hpp  Database.hpp  Logger.hpp
Backend/src/includes/controllers/: ArticleController.hpp  CommentController.hpp  Controller.hpp  UserController.hpp
Backend/src/includes/middleware/: Authentication.hpp
Backend/src/includes/models/: ArticleModel.hpp  UserModel.hpp
Backend/src/includes/routes/: Marker.hpp  Router.hpp
Backend/src/includes/utils/: CommandQuery.hpp  Config.hpp  Deunicode.hpp  Queries.hpp  Statics.hpp  Tratament.hpp  UserAuth.hpp
Backend/src/modules/: FindBotan.cmake
Backend/src/test/: hello_program  libmylib.go  libmylib.h
Frontend/: .env  .env.example  package.json
Frontend/src/components/: Footer.tsx  Header.tsx  Navbar.tsx
Frontend/src/routes/: Main.tsx
Frontend/src/services/: api.ts
Frontend/src/theme/: cards.less  colors.less  fonts.less  form.less  styles.less  variables.less
Frontend/src/views/: Create.tsx  Home.tsx
database/: seeders.sql  tables.sql
